@@ -9831,4 +9831,14 @@ No match
  0: 
  0+ 
 
+/(?<=(?=.)?)/
+
+/(?<=(?=.)?+)/
+
+/(?<=(?=.)*)/
+
+/(?<=(?=.){4,5})/
+
+/(?<=(?=.){4,5}x)/
+
 # End of testinput1 
